<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Messtin</string>
    <string name="action_settings">Settings</string>
    <string name="action_goto_page">Goto Page...</string>
    <string name="action_save_bookmark">Bookmark</string>
    <string name="action_show_bookmark">Show Bookmarks</string>
    <string name="title_activity_bookmark">Bookmarks</string>
    <string name="title_activity_thumbnail">Thumbnails</string>
    <string name="action_show_thumbnails">Thumbnail</string>
    <string name="action_pin_this_book">Pin This Book</string>
    <string name="action_refresh">Refresh</string>
</resources>
